<resources>
    <string name="app_name">MATAMJY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Add_Meal">Add Meal</string>
    <string name="menu_ShowMeal">Show Meal</string>
    <string name="menu_ChangLanguage">Chang Language</string>
    <string name="menu_LogOut">LogOut</string>
    <string name="menu_Updateinf">Update info</string>
    <string name="menu_home">home</string>
    <string name="menu_add_Category">Add Category</string>
    <string name="text_1">Mail Name</string>
    <string name="text_2">Mail Price</string>
    <string name="text_4">discription</string>
    <string name="text_3">Discription Meal</string>
    <string name="text_Sp">Catigory</string>
    <string name="title">Exit App</string>
    <string name="msg">Are you sure you want to exit App now?</string>
    <string name="ok">OK</string>
    <string name="No">NO</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userName">Enter The User Uame</string>
    <string name="userPassword">Enter The User PASS</string>
    <string name="userUpDate">UPDATE THE USER</string>
    <string name="detail">DETAILES</string>
    <string name="enter">GO</string>
    <string name="sgnUp">SIGNUP</string>
    <string name="rememberChec">Remember Me</string>
    <string name="enterName">Enter The Text</string>
    <string name="enterPass">Enter The  password</string>

    <string name="msgLogOut">how did you exit Now?</string>
    <string name="btnOut">Exite Now</string>
    <string name="titleLogOut">ُExite in the Acount</string>
    <string name="Arabic">Arabic</string>
    <string name="englis">English</string>
    <string name="edLang">Choose your preferred language?</string>
    <string name="chNameFound">No Name Found</string>
    <string name="chFound">No password Found</string>

    <string name="tostAddMail">done add meal</string>
    <string name="User_Name">User name</string>
    <string name="User_email">User Email</string>
    <string name="User_telephone">User Telephone</string>
    <string name="User_Password">User Password</string>
    <string name="User_Country">User Country</string>
    <string name="User_sex">Jender</string>
    <string name="User_jender">User Jender</string>
    <string name="User_Date">Date Birthday</string>
    <string name="enter_Name_User_sign">Enter Name The User</string>
    <string name="enter_sign_password">Enter password The User</string>
    <string name="Enter_The_Telephone">Enter The Telephone</string>
    <string name="name_update_info">UPDATE INFO USER</string>
    <string name="all_user">All User</string>
    <string name="update_category">UPDate Category</string>
    <string name="UPDATE_CATEGORY">UPDATE CATEGORY</string>
    <string name="enter_cat_new">enter category New</string>
    <string name="toat_anim_text">Please write in the text</string>
    <string name="loading_add_categor">Create Category</string>

    <string name="loading_add_descr">Please wait, while we are checking the credentials.</string>
    <string name="text_requierd">Required Field</string>
    <string name="loading_signUp_acount">creat Acount new </string>
    <string name="login">Login</string>
    <string name="Forget_Password">Forget Password?</string>
    <string name="fragment_login_password_hint">enter the password</string>
    <string name="text_comunicate">if you have  aquestion ,aquery,a suggestion, or a complain ,contact us on :</string>
    <string name="text_cal">Mobile:</string>
    <string name="text_email">Email:</string>
    <string name="text_suggestion">Suggestion :</string>
    <string name="text_send">SUBMIT</string>
    <string name="comunicate">Communicate</string>


</resources>
