<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.communicateapp.communicateuser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#458CB390"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/comText"
            android:layout_width="376dp"
            android:layout_height="81dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="38dp"
            android:text="@string/text_comunicate"
            android:textColor="#DA0909"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/comTel"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/text_cal"
            android:textColor="#D53A1212"
            android:textColorLink="#B38E8E"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/text_email"
            android:textColor="#C82A4FAD"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnCall"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_weight="0.5"
                android:background="@color/color_red"
                android:scaleType="fitCenter"
                android:src="@drawable/call_me" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/text_suggestion"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:background="@color/design_default_color_background"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent1"
            android:text="@string/text_send" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>