<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F10736"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgInfo"
                android:layout_width="match_parent"
                android:layout_height="274dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:adjustViewBounds="true"
                android:background="#00C42626"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/camera_colored" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#E6FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etInfoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/User_Name" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#E6FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/User_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#E6FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edTelInfo"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:background="#FFFFFF"
                    android:hint="@string/User_telephone" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#E6FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/User_Password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#E6FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/User_Country" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#E6FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userJender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/User_jender" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#E6FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userDateB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/User_Date" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button

                android:id="@+id/btnInfo"
                android:layout_width="match_parent"


                android:layout_height="wrap_content"

                android:background="#DD2C00"
                android:padding="17dp"
                android:text="Create Account"
                android:textAllCaps="false"

                android:textSize="24sp"


                android:textStyle="bold|italic" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>