<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="386dp"
        android:layout_height="693dp"
        android:background="#4AA99DBB"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgM"
                android:layout_width="match_parent"
                android:layout_height="174dp"

                android:background="#00BFA5"
                android:onClick="convertImage"
                app:srcCompat="@mipmap/camera_colored" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="390dp"
                android:layout_height="40dp"


                android:background="#00ECDEDE"
                android:text="@string/text_1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed1"
                android:layout_width="match_parent"
                android:layout_height="48dp"

                android:background="#B9FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="-163dp"
                tools:layout_editor_absoluteY="226dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"

                    android:paddingLeft="30dp"
                    android:text="@string/text_2"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"

                    android:paddingLeft="30dp"
                    android:text="@string/text_Sp"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed2"
                    android:layout_width="182dp"
                    android:layout_height="match_parent"
                    android:background="#B9FFFFFF"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="-138dp"
                    tools:layout_editor_absoluteY="298dp" />

                <Spinner
                    android:id="@+id/spAdd"
                    android:layout_width="203dp"
                    android:layout_height="match_parent"

                    android:background="#B9F5D3D3" />
            </LinearLayout>

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="46dp"

                android:paddingLeft="30dp"
                android:text="@string/text_3"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ed3"
                android:layout_width="match_parent"
                android:layout_height="86dp"

                android:background="#B9FFFFFF"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="403dp"
                android:layout_height="59dp"


                android:background="#EE8300"
                android:text="@string/Add_Meal" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>