<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".ui.ActivityProject.RegisterActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layoutPicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserRec"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/logo" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floAcSignUp"
            android:layout_width="108dp"
            android:layout_height="119dp"
            android:clickable="true"
            android:onClick="goCamera"
            app:srcCompat="@mipmap/camera_colored" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/layoutName"
        android:layout_marginTop="20dp"
        android:layout_below="@id/layoutPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:text="Overview"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etSignUp"
                    android:hint="@string/userName"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etTelUp"
                    android:hint="@string/Enter_The_Telephone"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etPassSign"
                    android:hint="@string/enter_sign_password"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="Gender" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-3dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:hint="Gender"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_date" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="348dp"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birth"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="hint" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnSign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DD2C00"
                android:padding="17dp"
                android:text="Create Account"
                android:textAllCaps="false"
                android:textSize="24sp"

                android:textStyle="bold|italic"


                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>

</androidx.core.widget.NestedScrollView>











